--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <body>
     <video autoplay muted loop style="position: fixed;right: 0; bottom: 0; min-width: 100%; min-height: 100%;">
-        <source src="https://test-videos.co.uk/vids/bigbuckbunny/mp4/h264/1080/Big_Buck_Bunny_1080_10s_5MB.mp4" type="video/mp4">
+        <source src="ecran-caisse-2021.mp4" type="video/mp4">
       </video>
 </body> 
 </html>
