--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html> 
-<html> 
+<html>
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+</head>
+    
 <body>
     <video autoplay muted loop style="position: fixed;right: 0; bottom: 0; min-width: 100%; min-height: 100%;">
         <source src="ecran-caisse-2021.mp4" type="video/mp4">
