--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head>
-    
+</head>  
 <body>
-    <video autoplay muted loop style="position: fixed;right: 0; bottom: 0; min-width: 100%; min-height: 100%;">
+    <video autoplay muted loop style="object-fit: cover;">
         <source src="ecran-caisse-2021.mp4" type="video/mp4">
       </video>
 </body> 
