--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 </head>  
 <body>
-    <video autoplay muted loop style="object-fit: cover;">
+    <video autoplay muted loop width="100%">
         <source src="ecran-caisse-2021.mp4" type="video/mp4">
       </video>
 </body> 
