--- a/index.html
+++ b/index.html
@@ -2,10 +2,37 @@
 <html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head>  
+</head>
+<style>
+    .video-container {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%; 
+      overflow: hidden;
+    }
+    .video-container video {
+      /* Make video to at least 100% wide and tall */
+      min-width: 100%; 
+      min-height: 100%; 
+
+      /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+      width: auto;
+      height: auto;
+
+      /* Center the video */
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+    }
+</style>
 <body>
-    <video autoplay muted loop width="100%">
-        <source src="ecran-caisse-2021.mp4" type="video/mp4">
-      </video>
+    <div class="video-container">
+        <video autoplay muted loop>
+            <source src="ecran-caisse-2021.mp4" type="video/mp4">
+        </video>
+    </div>
 </body> 
 </html>
